# BPFConductor

./: .gitignore  Cargo.toml  README.md
agent/: Cargo.toml
agent-api/: Cargo.toml
agent-api/src/: agent.v1.rs  lib.rs
agent-cli/: Cargo.toml
agent-cli/src/: args.rs  get.rs  list.rs  load.rs  main.rs  table.rs  unload.rs  utils.rs
agent/src/: config.rs  errors.rs  main.rs  utils.rs
agent/src/collector/: mod.rs
agent/src/common/: constants.rs  mod.rs  types.rs  utils.rs
agent/src/managers/: cache.rs  image.rs  mod.rs  prog.rs  registry.rs
agent/src/progs/: mod.rs  service_map.rs  types.rs
agent/src/progs/service_map/: mod.rs  program.rs
agent/src/progs/socket_tracer/: mod.rs  program.rs  tracker.rs  tracker_manager.rs  utils.rs
agent/src/progs/socket_tracer/protocols/: mod.rs
agent/src/progs/socket_tracer/protocols/core/: dataframe.rs  datastream.rs  datastream_buffer.rs  event_parser.rs  mod.rs  parse.rs  types.rs
agent/src/progs/socket_tracer/protocols/http/: types.rs
agent/src/registry/: mod.rs  registry.rs
agent/src/server/: http.rs  mod.rs  rpc.rs
bpflet/: Cargo.toml
bpflet-api/: Cargo.toml
bpflet-api/src/: bpflet.v1.rs  config.rs  constants.rs  lib.rs
bpflet-cli/: Cargo.toml
bpflet-cli/src/: args.rs  get.rs  helper.rs  image.rs  list.rs  load.rs  main.rs  table.rs  unload.rs
bpflet/src/: command.rs  errors.rs  handler.rs  helper.rs  main.rs  manager.rs  map.rs  serve.rs  service.rs  utils.rs
bpflet/src/cli/: args.rs  get.rs  helper.rs  image.rs  list.rs  load.rs  mod.rs  system.rs  table.rs  unload.rs
bpflet/src/dispatcher/: config.rs  mod.rs  tc.rs  xdp.rs
bpflet/src/oci/: cosign.rs  image_manager.rs  manager.rs  mod.rs
bpflet/src/program/: kprobe.rs  mod.rs  program.rs  tc.rs  tracepoint.rs  uprobe.rs  xdp.rs
docs/blog/: advanced_with_aya.md  scratch_with_aya.md
docs/desgin/: arch.md
ebpf-programs/conn-tracer/: Cargo.toml  Containerfile  daemonset.yaml  servicemonitor.yaml
ebpf-programs/conn-tracer/conn-tracer/: Cargo.toml
ebpf-programs/conn-tracer/conn-tracer-common/: Cargo.toml
ebpf-programs/conn-tracer/conn-tracer-common/src/: lib.rs
ebpf-programs/conn-tracer/conn-tracer-ebpf/: Cargo.toml
ebpf-programs/conn-tracer/conn-tracer-ebpf/src/: main.rs
ebpf-programs/conn-tracer/conn-tracer/src/: collector.rs  lib.rs  main.rs  resolver.rs  server.rs  tracer.rs  utils.rs
ebpf-programs/conn-tracer/xtask/src/: run.rs
ebpf-programs/link-tracer/: Cargo.toml  README.md
ebpf-programs/link-tracer/.vim/: coc-settings.json
ebpf-programs/link-tracer/link-tracer/: Cargo.toml
ebpf-programs/link-tracer/link-tracer-common/: Cargo.toml
ebpf-programs/link-tracer/link-tracer-common/src/: lib.rs  vmlinux.rs
ebpf-programs/link-tracer/link-tracer-ebpf/: Cargo.toml
ebpf-programs/link-tracer/link-tracer-ebpf/src/: main.rs
ebpf-programs/link-tracer/link-tracer/src/: collector.rs  main.rs  resolver.rs  resovler.rs  server.rs  tracer.rs
ebpf-programs/link-tracer/xtask/src/: build_ebpf.rs  run.rs
ebpf/conn-tracer/: Containerfile  README.md  dashboard.json  rbac.yaml  service.yaml
ebpf/conn-tracer/.vim/: coc-settings.json
ebpf/conn-tracer/conn-tracer/: Cargo.toml
ebpf/conn-tracer/conn-tracer-common/: Cargo.toml
ebpf/conn-tracer/conn-tracer-common/src/: lib.rs
ebpf/conn-tracer/conn-tracer-ebpf/: Cargo.toml
ebpf/conn-tracer/conn-tracer-ebpf/src/: main.rs  vmlinux.rs
ebpf/conn-tracer/conn-tracer/src/: main.rs
ebpf/conn-tracer/xtask/src/: build_ebpf.rs
ebpf/socket-tracer/socket-tracer/: Cargo.toml
ebpf/socket-tracer/socket-tracer-common/src/: lib.rs
ebpf/socket-tracer/socket-tracer-ebpf/: Cargo.toml
ebpf/socket-tracer/socket-tracer-ebpf/src/: filters.rs  helpers.rs  lib.rs  maps.rs  protocols.rs  types.rs
ebpf/socket-tracer/socket-tracer-ebpf/src/kprobes/: accept.rs  accept4.rs  close.rs  connect.rs  read.rs  readv.rs  recv.rs  recvfrom.rs  recvmmsg.rs  recvmsg.rs  send.rs  sendfile.rs  sendmmsg.rs  sendmsg.rs  sendto.rs  sockalloc.rs  ssendmsg.rs  write.rs  writev.rs
ebpf/socket-tracer/socket-tracer/src/: accept.rs  accept4.rs  close.rs  connect.rs  main.rs  read.rs  readv.rs  recv.rs  recvfrom.rs  recvmmsg.rs  recvmsg.rs  sec_msg.rs  send.rs  sendfile.rs  sendmmsg.rs  sendmsg.rs  sendto.rs  sock_msg.rs  sockalloc.rs  ssendmsg.rs  write.rs  writev.rs
proto/: agent.proto  bpflet.proto
xtask/src/: build_ebpf.rs  main.rs  protobuf.rs  run.rs
