[workspace]
members = [
    "agent",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
ahash = { version = "0.8.11", default-features = false }
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
aya = { version = "0.12.0", default-features = false }
base16ct = { version = "0.2.0", default-features = false }
base64 = { version = "0.22.0", default-features = false }
bpfman-lib = { git = "https://github.com/bpfman/bpfman", branch = "main", package = "bpfman" }
bpfman-api = { git = "https://github.com/bpfman/bpfman", branch = "main", package = "bpfman-api" }
caps = { version = "0.5.4", default-features = false }
chrono = { version = "0.4.31", default-features = false }
clap = { version = "4", default-features = false }
comfy-table = { version = "7.1.0", default-features = false }
env_logger = { version = "0.11.3", default-features = false }
flate2 = { version = "1.0", default-features = false }
futures = { version = "0.3.30", default-features = false }
hex = { version = "0.4.3", default-features = false }
lazy_static = { version = "1", default-features = false }
log = { version = "0.4", default-features = false }
netlink-packet-route = { version = "0.17.1", default-features = false }
nix = { version = "0.27", default-features = false }
oci-distribution = { version = "0.10.0", default-features = false }
prometheus-client = { version = "0.22.2", default-features = false }
prost = { version = "0.12.3", default-features = false }
prost-types = { version = "0.12.2", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sigstore = { version = "0.7.2", default-features = false }
sled = { version = "0.34.7", default-features = false }
thiserror = { version = "1", default-features = false }
rand = { version = "0.8", default-features = false }
regex = { version = "1.9.6", default-features = false }
rtnetlink = { version = "0.13.1", default-features = false }
tar = { version = "0.4", default-features = false }
tokio = { version = "1.33.0", default-features = false }
tokio-stream = { version = "0.1.12", default-features = false }
toml = { version = "0.8.8", default-features = false }
tonic = { version = "0.11.0", default-features = false }
tonic-build = { version = "0.11.0", default-features = false }
tower = { version = "0.4.13", default-features = false }
url = { version = "2.5.0", default-features = false }
