[package]
name = "agent-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, features = ["std"] }
log = { workspace = true }
prost = { workspace = true, features = ["prost-derive", "std"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["codegen", "prost", "transport"] }
tower = { workspace = true }
url = { workspace = true }