[package]
description = "gRPC bindings to the bpflet API"
name = "bpflet-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "bpflet_api"
path = "src/lib.rs"

[dependencies]
aya = { workspace = true }
clap = { workspace = true, features = ["derive", "std"] }
log = { workspace = true }
prost = { workspace = true, features = ["prost-derive", "std"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true, features = ["parse"] }
tonic = { workspace = true, features = ["codegen", "prost"] }
url = { workspace = true }
