[package]
name = "link-tracer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
link-tracer-common = { path = "../link-tracer-common", features = ["user"] }
anyhow = "1"
env_logger = "0.11.1"
k8s-openapi = { version = "0.21.0", features = ["v1_24"] }
kube = "0.88.1"
kube-derive = "0.88.1"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
futures = "0.3.30"

[[bin]]
name = "link-tracer"
path = "src/main.rs"
