[package]
name = "conn-tracer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ahash = "0.8.7"
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
anyhow = "1"
env_logger = "0.11.1"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
log = "0.4.21"
libc = "0.2.153"

[dev-dependencies]
tokio = { version = "1.25", features = ["full"] }

[[bin]]
name = "conn-tracer"
path = "src/main.rs"
